--- a/index.html
+++ b/index.html
@@ -661,6 +661,73 @@
           </div>
         </div>
       </section>
+
+      <section> 
+        <div class="container w_1920 pd0">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="swiper-container sl-product-2">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide"> 
+                    <a href="#" class="flex"><img src="./assets/images/common/item_7.jpg" alt=""></a>
+                  </div>  
+                  <div class="swiper-slide"> 
+                    <a href="#" class="flex"><img src="./assets/images/common/item_8.jpg" alt=""></a>
+                  </div>  
+                  <div class="swiper-slide"> 
+                    <a href="#" class="flex"><img src="./assets/images/common/item_9.jpg" alt=""></a>
+                  </div>  
+                  <div class="swiper-slide"> 
+                    <a href="#" class="flex"><img src="./assets/images/common/item_10.jpg" alt=""></a>
+                  </div>  
+                </div>
+              </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="pt-60">
+        <div class="container w_1650">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="about-box">
+                <img class="icon-bg" src="./assets/images/backgroup/icon-bg.png" alt="">
+                <img class="icon-bg2" src="./assets/images/backgroup/icon-bg2.png" alt="">
+                <div class="image">
+                  <img src="./assets/images/common/item_11.jpg" alt="">
+                </div>
+                <div class="content">
+                  <h2 class="mb-30 color-3">There is a Whole <br class="show-desktop">
+                  Universe in Every Bite.</h2> 
+                  <p class="mb-30">We are lucky to live in a glorious age that gives us everything we could ask for as a human race. What more could you need when you have meat covered in cheese nestled between bread. rom smashed patties at Shake Shack to Glamburgers at Honky Tonk, there’s a little something for everyone. Some burgers are humble.</p>
+                  <ul class="mb-30">
+                    <li>
+                      <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 408.576 408.576" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g><path d="M204.288 0C91.648 0 0 91.648 0 204.288s91.648 204.288 204.288 204.288 204.288-91.648 204.288-204.288S316.928 0 204.288 0zm114.176 150.528-130.56 129.536c-7.68 7.68-19.968 8.192-28.16.512L90.624 217.6c-8.192-7.68-8.704-20.48-1.536-28.672 7.68-8.192 20.48-8.704 28.672-1.024l54.784 50.176L289.28 121.344c8.192-8.192 20.992-8.192 29.184 0s8.192 20.992 0 29.184z" fill="#bb0001" data-original="#000000" class="" opacity="1"></path></g></svg>
+                      <span>receive party booking</span>
+                    </li>
+                    <li>
+                      <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 408.576 408.576" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g><path d="M204.288 0C91.648 0 0 91.648 0 204.288s91.648 204.288 204.288 204.288 204.288-91.648 204.288-204.288S316.928 0 204.288 0zm114.176 150.528-130.56 129.536c-7.68 7.68-19.968 8.192-28.16.512L90.624 217.6c-8.192-7.68-8.704-20.48-1.536-28.672 7.68-8.192 20.48-8.704 28.672-1.024l54.784 50.176L289.28 121.344c8.192-8.192 20.992-8.192 29.184 0s8.192 20.992 0 29.184z" fill="#bb0001" data-original="#000000" class="" opacity="1"></path></g></svg>
+                      <span>activities for kids</span>
+                    </li>
+                    <li>
+                      <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 408.576 408.576" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g><path d="M204.288 0C91.648 0 0 91.648 0 204.288s91.648 204.288 204.288 204.288 204.288-91.648 204.288-204.288S316.928 0 204.288 0zm114.176 150.528-130.56 129.536c-7.68 7.68-19.968 8.192-28.16.512L90.624 217.6c-8.192-7.68-8.704-20.48-1.536-28.672 7.68-8.192 20.48-8.704 28.672-1.024l54.784 50.176L289.28 121.344c8.192-8.192 20.992-8.192 29.184 0s8.192 20.992 0 29.184z" fill="#bb0001" data-original="#000000" class="" opacity="1"></path></g></svg>
+                      <span>100% Local ingredients</span>
+                    </li>
+                    <li>
+                      <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 408.576 408.576" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g><path d="M204.288 0C91.648 0 0 91.648 0 204.288s91.648 204.288 204.288 204.288 204.288-91.648 204.288-204.288S316.928 0 204.288 0zm114.176 150.528-130.56 129.536c-7.68 7.68-19.968 8.192-28.16.512L90.624 217.6c-8.192-7.68-8.704-20.48-1.536-28.672 7.68-8.192 20.48-8.704 28.672-1.024l54.784 50.176L289.28 121.344c8.192-8.192 20.992-8.192 29.184 0s8.192 20.992 0 29.184z" fill="#bb0001" data-original="#000000" class="" opacity="1"></path></g></svg>
+                      <span>Club connect members</span>
+                    </li>
+                  </ul>
+                  <div class="wrap-button">
+                    <a href="#" class="tf-button flex items-center mr-15">READ MORE ABOUT US</a>
+                    <a href="#" class="tf-button style2 flex items-center">book a table</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
 
     <a id="scroll-top"></a> 
