--- a/home-01.html
+++ b/home-01.html
@@ -173,7 +173,7 @@
       <!-- Header -->
       <header id="header_main" class="header style1">
         <div class="container w_1290">
-          <div id="site-header" class="style1 wow fadeIn" data-wow-delay=".3s"> 
+          <div id="site-header" class="style1"> 
             <div class="site-header-inner w-full">
               <div class="header__logo-mobile">
                   <a href="#"><img src="assets/images/logo/logo2.png" alt=""></a>
@@ -268,11 +268,42 @@
               </nav>
               <div class="right ml-auto flex justify-end items-center">
                 <a href="#" class="tf-button mr-25">order online now</a>
-                <img class="hamburger mr-12" src="./assets/images/icon/hamburger.png" alt="">
+                <div class="hamburger mr-12">
+                  <img class="icon_hamburger cursor-pointer" src="./assets/images/icon/hamburger.png" alt="">
+                  <div class="content">
+                    <div class="icon close_hamburger cursor-pointer">x</div>
+                    <h5 class="mb-36 color-3 text-spacing-1">Best Fast Food <br> Delicious And Quality.</h5>
+                    <ul class="mb-42 list">
+                      <li>
+                        <p class="text-spacing-1 uppercase text-500 mb-0 font-1 text-spacing-1">call to order</p>
+                        <p class="phone font-1 text-spacing-1">910-344-7520</p>
+                      </li>
+                      <li class="style">
+                      <p class="mb4 font2 color-3">62 Big Tree St, Livonia, New York 14487, USA</p>
+                        <p class="font2 color-3">themesflat@gmail.com</p>
+                      </li>
+                       <li>
+                        <p class="mb5 font2 color-3"><span>Monday – Thursday:</span> 8.00am – 21.00pm</p>
+                        <p class="mb5 font2 color-3"><span>Friday – Saturday : </span> 9.00am – 22.00pm</p>
+                        <p class="mb5 font2 color-3"><span>Sunday:</span> 8.00 – 23.00pm</p>
+                        <p class="mb5 font2 color-3"><span>Holiday: </span> <span class="color-2">Closed</span></p>
+                      </li>
+                    </ul>
+                    <ul class="social-style relative flex items-center justify-center">
+                      <li><a href="#" class="active"><i class="fab fa-facebook-f"></i></a></li>
+                      <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                      <li><a href="#"><i class="fab fa-skype"></i></a></li>
+                      <li><a href="#"><i class="fab fa-facebook-messenger"></i></a></li>
+                      <li><a href="#">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M448,209.91a210.06,210.06,0,0,1-122.77-39.25V349.38A162.55,162.55,0,1,1,185,188.31V278.2a74.62,74.62,0,1,0,52.23,71.18V0l88,0a121.18,121.18,0,0,0,1.86,22.17h0A122.18,122.18,0,0,0,381,102.39a121.43,121.43,0,0,0,67,20.14Z"></path></svg>
+                      </a></li>
+                    </ul>
+                  </div>
+                </div>
               </div>
               <!-- /#main-nav -->  
             </div>
-             <a class="flex justify-center mobile-logo">
+              <a class="flex justify-center mobile-logo">
                 <img src="./assets/images/logo/logo.png" alt="">
               </a>
               <div class="mobile-button"><span></span></div> 
@@ -349,7 +380,7 @@
         <div class="container w_1650">
           <div class="row">
             <div class="col-md-12">
-              <div class="gradient about-inner radius-30 wow fadeIn" data-wow-delay=".2s">
+              <div class="gradient about-inner style1 radius-30 wow fadeIn" data-wow-delay=".2s">
                 <div class="icon-bg icon_1 wow fadeInLeft" data-wow-delay=".3s">
                   <img src="./assets/images/icon/chips.png" alt="">
                 </div>
@@ -726,7 +757,7 @@
                   <h2 class="mb-24 color-3 text-spacing-1">There is a Whole <br class="show-desktop">
                   Universe in Every Bite.</h2> 
                   <p class="mb-22">We are lucky to live in a glorious age that gives us everything we could ask for as a human race. What more could you need when you have meat covered in cheese nestled between bread. rom smashed patties at Shake Shack to Glamburgers at Honky Tonk, there’s a little something for everyone. Some burgers are humble.</p>
-                  <ul class="mb-30">
+                  <ul class="mb-30 icon-list">
                     <li>
                       <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" width="512" height="512" x="0" y="0" viewBox="0 0 408.576 408.576" style="enable-background:new 0 0 512 512" xml:space="preserve" class=""><g><path d="M204.288 0C91.648 0 0 91.648 0 204.288s91.648 204.288 204.288 204.288 204.288-91.648 204.288-204.288S316.928 0 204.288 0zm114.176 150.528-130.56 129.536c-7.68 7.68-19.968 8.192-28.16.512L90.624 217.6c-8.192-7.68-8.704-20.48-1.536-28.672 7.68-8.192 20.48-8.704 28.672-1.024l54.784 50.176L289.28 121.344c8.192-8.192 20.992-8.192 29.184 0s8.192 20.992 0 29.184z" fill="#bb0001" data-original="#000000" class="" opacity="1"></path></g></svg>
                       <span>receive party booking</span>
@@ -752,7 +783,7 @@
               </div>
             </div>
             <div class="col-md-4 wow fadeIn" data-wow-delay=".3s">
-              <div class="icon-box radius-20 gradient-3 mobile-mb30">
+              <div class="icon-box style1 radius-20 gradient-3 mobile-mb30">
                 <div class="top">
                   <div class="left">
                     <h4>Gift Vouchers For Friends</h4>
@@ -769,7 +800,7 @@
             </div>
 
             <div class="col-md-4 wow fadeIn" data-wow-delay=".5s">
-              <div class="icon-box radius-20 gradient-4 mobile-mb30">
+              <div class="icon-box style1 radius-20 gradient-4 mobile-mb30">
                 <div class="top">
                   <div class="left">
                     <h4>First Order <br class="show-desktop"> Frist Discount</h4>
@@ -786,7 +817,7 @@
             </div>
 
             <div class="col-md-4 wow fadeIn" data-wow-delay=".7s">
-              <div class="icon-box radius-20 gradient-5">
+              <div class="icon-box style1 radius-20 gradient-5">
                 <div class="top">
                   <div class="left">
                     <h4>New Season New Food</h4>
@@ -1043,7 +1074,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12 wow fadeIn" data-wow-delay=".3s">
-              <div class="subscribe style1 flex radius-20 gradient-6">
+              <div class="subscribe style1 flex items-center radius-20 gradient-6">
                   <div class="icon"><img class="ring" src="./assets/images/icon/ring.png" alt=""></div>
                   <div class="content">
                     <h4 class="mb-12 text-spacing-0_5">Subscribe to receive <br class="show-desktop"> news & promotions from us</h4>
@@ -1210,7 +1241,6 @@
     <script src="app/js/jquery.min.js"></script>
     <script type="text/javascript" src="./app/js/jquery.cookie.min.js"></script>
     <script src="app/js/plugin.js"></script> 
-    <script src="app/js/bootstrap.bundle.min.js.map"></script>
     <script src="app/js/swiper-bundle.min.js"></script>
     <script src="app/js/swiper.js"></script>
     <script src="app/js/jquery-validate.js"></script>
@@ -1251,6 +1281,16 @@
           link.classList.add('active');
         });
       });
+
+      let hamburger = document.querySelector('.hamburger')
+      let icon_hamburger = hamburger.querySelector('.icon_hamburger')
+      let close_hamburger = hamburger.querySelector('.close_hamburger')
+      icon_hamburger.addEventListener('click', function(){
+        hamburger.classList.toggle("toggle")
+      })
+      close_hamburger.addEventListener('click', function(){
+        hamburger.classList.toggle("toggle")
+      })
     </script>
   </body>
 </html>
